--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>X X X Prénom Nom ici X X X</title>
+    <title>DAILLIEZ Thibault</title>
     <meta name="description" content="Un décor parallaxe.">
     <script type="text/javascript" src="lib/phaser.js"></script>
     <script type="text/javascript" src="src/Tableau1.js"></script>
