--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div id="game"></div>
-<a href="#utilise-tes-neurones-pour-comprendre-ce-que-veut-le-prof">
-    Lien vers le level de NOM Prénom
+<a href="#https://gladysbrnl.github.io/Halloween/">
+    Lien vers le level de Gladys
 </a>
 </body>
 </html>
