--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script type="text/javascript" src="src/Tableau1.js"></script>
     <script type="text/javascript" src="src/main1.js"></script>
     <link rel="stylesheet" href="src/main.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-37183WQ0H4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-37183WQ0H4');
+    </script>
 </head>
 <body>
 <div id="game"></div>
